hello-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: Blablatest
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.41
        name: hello-http
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            cpu: 10m
          limits:
            cpu: 10m
