hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubernetes.io/change-cause: Blablatest
  labels:
    app: hello
  name: hello
spec:
  replicas: 2
  serviceName: hello
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.41
        name: hello-http
        ports:
          - containerPort: 80
            name: http
        livenessProbe:
          httpGet:
            path: /livez
            port: 80 
          periodSeconds: 15
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 80 
          periodSeconds: 5
          failureThreshold: 2
        volumeMounts:
          - name: status
            mountPath: /var/lib/hello-http
            readOnly: yes

      volumes:
        - name: status
          emptyDir:
            medium: Memory
