nginx-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.27
          name: nginx
          resources: {}
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            periodSeconds: 5
            failureThreshold: 2
          volumeMounts:
            - name: nfsshare
              mountPath: /usr/share/nginx/html
              readOnly: yes
              subPath: html
            - name: nginx
              mountPath: /etc/nginx/conf.d
        - name: php
          image: php:8.4-fpm
          volumeMounts:
            - name: nfsshare
              mountPath: /var/www/html
              readOnly: yes
              subPath: html

      volumes:
        - name: nfsshare
          nfs:
            server: 192.168.56.200
            path: /
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: default.conf
                path: default.conf
                mode: 0600
        - name: nginx
          emptyDir:
