wwwphp-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: wwwphp
  name: wwwphp
spec:
  containers:
  - image: nginx:1.27
    name: www
  - image: php:8.2-fpm
    name: php
  dnsPolicy: ClusterFirst
  restartPolicy: Always
